--- a/Calculator.ipynb
+++ b/Calculator.ipynb
@@ -41,7 +41,7 @@
     "    \n",
     "def main():\n",
     "    a=int(input('Please put your first number:'))\n",
-    "    b=int(input('please put ypur second number:'))\n",
+    "    b=int(input('please put your second number:'))\n",
     "    op=(input(\n",
     "        'please choose one these opperators: \\nchoose one of the following\"+ ,-, /, *\"'))\n",
     "    print(calc(a,b,op))\n",
