--- a/Calculator.ipynb
+++ b/Calculator.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -41,7 +43,7 @@
     "    \n",
     "def main():\n",
     "    a=int(input('Please put your first number:'))\n",
-    "    b=int(input('please put ypur second number:'))\n",
+    "    b=int(input('please put your second number:'))\n",
     "    op=(input(\n",
     "        'please choose one these opperators: \\nchoose one of the following\"+ ,-, /, *\"'))\n",
     "    print(calc(a,b,op))\n",
