--- a/Calculator.ipynb
+++ b/Calculator.ipynb
@@ -12,7 +12,7 @@
      "output_type": "stream",
      "text": [
       "Please put your first number:10000000\n",
-      "please put ypur second number:200000\n",
+      "please put your second number:200000\n",
       "please choose one these opperators: \n",
       "choose one of the following\"+ ,-, /, *\"*\n",
       "2000000000000\n"
